  BulkScorer#score(LeafCollector collector, Bits acceptDocs, int min, int max). The method will be removed in the next
  major version. Replace usages with the latter, providing 0 as min and DocIdSetIterator.NO_MORE_DOCS as max in case
  the entire segment should be scored. Subclasses that override the method should instead override its replacement.
  (Luca Cavanna)

New Features
---------------------

* GITHUB#13430: Allow configuring the search concurrency via
  TieredMergePolicy#setTargetSearchConcurrency. This in-turn instructs the
  merge policy to try to have at least this number of segments on the highest
  tier. (Adrien Grand, Carlos Delgado)

* GITHUB#13517: Allow configuring the search concurrency on LogDocMergePolicy
  and LogByteSizeMergePolicy via a new #setTargetConcurrency setter.
  (Adrien Grand)

* GITHUB#13568: Add sandbox facets module to compute facets while collecting. (Egor Potemkin, Shradha Shankar)

* GITHUB#13678: Add support JDK 23 to the Panama Vectorization Provider. (Chris Hegarty)

* GITHUB#13689: Add a new faceting feature, dynamic range facets, which automatically picks a balanced set of numeric
  ranges based on the distribution of values that occur across all hits.  For use cases that have a highly variable
  numeric doc values field, such as "price" in an e-commerce application, this facet method is powerful as it allows the
  presented ranges to adapt depending on what hits the query actually matches.  This is in contrast to existing range
  faceting that requires the application to provide the specific fixed ranges up front. (Yuting Gan, Greg Miller,
  Stefan Vodita)

Improvements
---------------------
* GITHUB#13475: Re-enable intra-merge parallelism except for terms, norms, and doc values.
  Related to GITHUB#13478.  (Ben Trent)

* GITHUB#13548: Refactor and javadoc update for KNN vector writer classes. (Patrick Zhai)

* GITHUB#13562: Add Intervals.regexp and Intervals.range methods to produce  IntervalsSource