@@ -73,7 +73,14 @@ final class MemorySegmentIndexInputProvider
           MemorySegmentIndexInput.newInstance(
               resourceDescription,
               arena,
-              map(arena, resourceDescription, fc, context, chunkSizePower, preload, fileSize),
+              map(
+                  arena,
+                  resourceDescription,
+                  fc,
+                  context.readAdvice,
+                  chunkSizePower,
+                  preload,
+                  fileSize),
               fileSize,
               chunkSizePower,
               confined);
@@ -110,7 +117,7 @@ final class MemorySegmentIndexInputProvider
       Arena arena,
       String resourceDescription,
       FileChannel fc,
-      IOContext context,
+      ReadAdvice readAdvice,
       int chunkSizePower,
       boolean preload,
       long length)
@@ -140,7 +147,7 @@ final class MemorySegmentIndexInputProvider
       if (preload) {
         segment.load();
       } else if (nativeAccess.isPresent() && chunkSizePower >= 21) {
-        nativeAccess.get().madvise(segment, context);
+        nativeAccess.get().madvise(segment, readAdvice);
       }
       segments[segNr] = segment;
       startOffset += segSize;
