@@ -25,7 +25,7 @@ import org.apache.lucene.util.Constants;
 abstract class NativeAccess {
 
   /** Invoke the {@code madvise} call for the given {@link MemorySegment}. */
-  public abstract void madvise(MemorySegment segment, IOContext context) throws IOException;
+  public abstract void madvise(MemorySegment segment, ReadAdvice readAdvice) throws IOException;
 
   /**
    * Return the NativeAccess instance for this platform. At moment we only support Linux and MacOS
